# upgrade-demo

poetry-1.8.5/: README.md  install.bash  pyproject.toml
poetry-1.8.5/my_simple_app/: __init__.py
poetry-1.8.5/tests/: test_app.py
